# mental-state-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: ai-analysis-improvement-plan.md  completed-work.md  context-memory-graph-plan.md  deployment.md  project-plan.md
mental_state_bot/: __init__.py  __main__.py  cli.py  config.py  emotions.py  logging.py  time_utils.py
mental_state_bot/ai/: __init__.py  client.py  pricing.py  prompts.py  schemas.py  service.py
mental_state_bot/bot/: app.py  handlers.py  keyboards.py
mental_state_bot/db/: __init__.py  models.py  repositories.py  session.py
mental_state_bot/scheduler/: jobs.py
mental_state_bot/services/: analysis_backfill.py  archive_audit.py  doctor.py  exports.py  interaction_gate.py  interactions.py  journal_day.py  memory.py  (+13 more)
migrations/: env.py
scripts/: backup.sh  deploy.sh
tests/: test_ai_client.py  test_ai_fallbacks.py  test_analysis_backfill.py  test_archive_audit.py  test_bot_helpers.py  test_cli.py  test_config.py  test_doctor.py  test_exports.py  test_interaction_gate.py  test_interactions.py  test_journal_day.py  test_life_context.py  test_memory.py  test_memory_graph.py  test_memory_graph_exchange.py  test_memory_graph_visualization.py  test_period_analysis.py  test_period_summaries.py  test_planned_events.py  test_pricing.py  test_review.py  test_scheduler_jobs.py  test_semantic_context.py  test_snapshots.py  test_time_utils.py  test_visual_report.py  test_wake_time.py
(+2 files in other folders)
