[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mental-state-bot"
version = "0.1.0"
description = "Personal Telegram living diary bot with AI analysis and semantic memory."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Personal project" }]
dependencies = [
    "aiogram>=3.8,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "httpx>=0.27,<1",
    "pgvector>=0.3,<1",
    "Pillow>=10,<12",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
    "SQLAlchemy[asyncio]>=2.0,<3",
    "tzdata>=2024.1",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[project.scripts]
mental-state-bot = "mental_state_bot.cli:app"

[tool.setuptools.packages.find]
include = ["mental_state_bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
